# solvespace

./: .gitignore  CMakeLists.txt
src/: lib.cpp
